--- a/scss/style.css
+++ b/scss/style.css
@@ -247,6 +247,7 @@ button:hover,
 
 .header_menu {
   background: white;
+  z-index: 1;
   margin-top: 1.5rem;
   padding: 1rem;
   border-radius: 5px;
@@ -263,5 +264,25 @@ button:hover,
   padding: 10px;
   text-align: center;
   display: block;
+}
+
+.hero__image {
+  position: relative;
+  background-image: url(../images/bg-intro-mobile.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 17.5rem;
+}
+
+.hero__image::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: url(../images/image-mockups.png);
+  background-size: 90%;
+  background-repeat: no-repeat;
+  background-position: center bottom;
 }
 /*# sourceMappingURL=style.css.map */
