--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -268,7 +268,7 @@ button:hover,
 
 .hero__image {
   position: relative;
-  background-image: url(../images/bg-intro-mobile.svg);
+  background-image: url(../../images/bg-intro-mobile.svg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -280,7 +280,7 @@ button:hover,
   position: absolute;
   height: 100%;
   width: 100%;
-  background-image: url(../images/image-mockups.png);
+  background-image: url(../../images/image-mockups.png);
   background-size: 90%;
   background-repeat: no-repeat;
   background-position: center bottom;
