--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -15,19 +15,102 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1.3;
-  font-size: $font-med;
-  font-weight: 400;
+  font-size: $font-sm;
+  font-weight: 300;
   color: $grayishBlue;
+  overflow-x: hidden;
+
+  @include breakpoints-up(large) {
+    font-size: $font-med;
+  }
 
   &.noscroll {
     overflow: hidden;
   }
 }
+
+// text
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  line-height: 1.15;
+  color: $darkBlue;
+  margin-top: 0;
+}
+
+h1 {
+  font-size: 2.31rem;
+  margin-bottom: 1.5rem;
+
+  @include breakpoints-up(large) {
+    font-size: $font-xlg;
+  }
+}
+p {
+  line-height: 1.5;
+  margin-bottom: 2.25rem;
+}
 a,
 a:visited,
 a:hover {
   text-decoration: none;
-  color: $grayishBlue;
+}
+//spacing
+.container {
+  max-width: 69.375rem;
+  margin: 0 auto;
+
+  &--pall {
+    padding-top: 4.375rem;
+    padding-right: 1.5rem;
+    padding-bottom: 4.375rem;
+    padding-left: 1.5rem;
+
+    @include breakpoints-up(large) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
+  }
+
+  &--py {
+    padding-top: 4.375rem;
+    padding-bottom: 4.375rem;
+
+    @include breakpoints-up(large) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
+  }
+
+  &--px {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+
+  &--pt {
+    padding-top: 4.375rem;
+
+    @include breakpoints-up(large) {
+      padding-top: 6rem;
+    }
+  }
+
+  &--pr {
+    padding-right: 1.5rem;
+  }
+
+  &--pb {
+    padding-bottom: 4.375rem;
+
+    @include breakpoints-up(large) {
+      padding-bottom: 6rem;
+    }
+  }
+
+  &--pl {
+    padding-left: 1.5rem;
+  }
 }
 
 // flexbox
@@ -53,6 +136,7 @@ a:hover {
 //buttons
 button,
 .button {
+  display: inline-block;
   font-family: "Public Sans", sans-serif;
   padding: 0.875rem 1.875rem;
   border-radius: 50px;
@@ -82,9 +166,4 @@ button,
   @include breakpoints-up(large) {
     display: none;
   }
-}
-//spacing
-.container {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
